--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,20 @@
+sudo: false
 language: node_js
 node_js:
   - "0.10"
+cache:
+  - apt
+addons:
+  apt:
+    sources:
+      - mono
+    packages:
+      - mono-complete
+      - nuget
+      - referenceassemblies-pcl
+after_success:
+  - grunt compile
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono .nuget/nuget.exe pack Knockout.Validation.nuspec
+  - curl -i -F name=knockout.validation.travis.nupkg -F file=@Knockout.Validation.2.1.0.nupkg https://uguu.se/api.php?d=upload-tool
