--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
   apt:
     sources:
       - mono
+	  - mono-beta
+	  - mono-libtiff-compat
     packages:
       - mono-complete
       - nuget
