Use (old) nuget from repo, should work

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,5 @@ addons:
       - referenceassemblies-pcl
 after_success:
   - grunt compile
-  - mkdir -p .nuget
-  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - mono .nuget/nuget.exe pack Knockout.Validation.nuspec
+  - nuget pack Knockout.Validation.nuspec
   - curl -i -F name=knockout.validation.travis.nupkg -F file=@Knockout.Validation.2.1.0.nupkg https://uguu.se/api.php?d=upload-tool
